<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/bank_action_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/action_add_category"
        android:title="@string/bank_add_category"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/action_add_statement"
        android:title="@string/bank_add_phrase"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/action_download_cache"
        android:title="@string/bank_download_cache"
        android:icon="@drawable/ic_baseline_download_24"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/action_import_global"
        android:title="@string/global_import_title"
        app:showAsAction="never" />
</menu>
