<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/spotlight_menu_item"
        android:title="@string/content_description_spotlight"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/clear_menu_item"
        android:title="@string/clear"
        android:icon="@drawable/ic_baseline_clear_24"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings" />
    <item
        android:id="@+id/dialog_menu_item"
        android:title="@string/dialog_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_chat_24"
        app:iconTint="?attr/colorOnPrimary" />
    <item
        android:id="@+id/logout_menu_item"
        android:title="@string/logout" />
</menu>
