...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_small">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/say_button"
                style="@style/Widget.LinkaType.Button.Say"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:contentDescription="@string/say"
                android:text="@string/say"
...
                android:layout_weight="1"
                app:boxStrokeColor="@color/colorOutline"
                app:boxStrokeWidthFocused="2dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_to_speech_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:hint="@string/input_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
...
